syntax = "proto3";

option go_package = ".;coinbase_api";

package coinbase_api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service coinbaseAPI {
  // Health returns the health of the API.
  rpc Health (google.protobuf.Empty) returns (HealthResponse) {}
  rpc GetUtxo (GetUtxoRequest) returns (Utxo) {}
  rpc MarkUtxoSpent (MarkUtxoSpentRequest) returns (google.protobuf.Empty) {}
}

// swagger:model HealthResponse
message HealthResponse {
  bool ok = 1;
  string details = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// swagger:model GetUtxoRequest
message GetUtxoRequest {
  string address = 1;
}

// swagger:model Utxo
message Utxo {
  bytes txId = 1;
  uint32 vout = 2;
  bytes script  = 3;
  uint64 satoshis = 4;
}

// swagger:model MarkUtxoSpentRequest
message MarkUtxoSpentRequest {
  bytes txId = 1;
  uint32 vout = 2;
  bytes spentByTxId = 3;
}
